[tool.poetry]
name = "tensora"
version = "0.3.0"
description = "Library for dense and sparse tensors built on the tensor algebra compiler"
authors = ["David Hagen <david@drhagen.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://tensora.drhagen.com"
repository = "https://github.com/drhagen/tensora"
keywords = ["tensor", "sparse", "matrix", "array"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
returns = "^0.20|^0.21|^0.22"
cffi = "^1.11"
parsita = "^2.0"
typer = "^0.9"
numpy = { version = "^1.24", optional = true }
scipy = { version = "^1.7", optional = true }

[tool.poetry.dev-dependencies]
nox_poetry = "^1.0.2"

# Test
pytest = "^7.4"
pytest-cov = "*"

# Fuzzing
hypothesis = "^6.75"
hypofuzz = "^23.7"

# Lint
ruff = "^0.1"

# Docs
mkdocs-material = "^9"

[tool.poetry.scripts]
tensora = "tensora.cli:app"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pass",
    "raise NotImplementedError",
    "def __str__",
    "def __repr__",
]

[tool.coverage.paths]
source = [
    "src/",
    ".nox/test*/lib/python*/site-packages/",
    ".nox/test*/Lib/site-packages/",
    "*/tensora/src/",
]

[tool.ruff]
src = ["src"]
line-length = 99

extend-select = [
    "I", # isort
    "N", # pep8-naming
]

[tool.ruff.per-file-ignores]
# Allow glob imports and uppercase identifiers in tests
"tests/*" = ["F403", "F405", "N802", "N806"]

# F401: Allow unused imports in __init__.py
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
